--- a/styles.css
+++ b/styles.css
@@ -47,24 +47,28 @@
     position: relative;
     text-align: center;
     padding-top: 20px;
-    opacity: 0.7;
+    z-index: 1;
+    opacity: 0.9;
 }
 .contactBlock {
     position: absolute;
     bottom: 390px;
     right: 460px;
     background-color: white;
-    opacity: 0.6;
+    opacity: 0.8;
     padding-bottom: 300px;
     padding-right: 400px;
     text-align: center;
+    z-index: 2;
 }
 .contactText {
     color: black;
     position: absolute;
     top: 320px;
     left: 1100px;
+    z-index: 3;
 }
 .contactText h4 {
     padding-bottom: 10px;
+    text-decoration: underline;
 }
