--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
+@media only screen and (max-width: 1000px){
+  .nav-item {
+    display: none;
+  }
+}
+  .dropdown {
+    float: right;
+    overflow: hidden;
+  }
+  .dropdown .dropdown-button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    margin: 0;
+  }
+  .dropdown-content a {
+    display: none;
+    float: none;
+    color: black;
+    text-decoration: none;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+
 .row {
     display: flex;
     margin-left: auto;
@@ -5,8 +30,8 @@
     margin-top: 20px;
     margin-bottom: 3px;
     flex-wrap: wrap;
-    align-content: center;
-    width: 66%;
+    text-align: center;
+    width: 100%;
   } 
 .column {
     flex: 16,66%;
@@ -20,7 +45,7 @@
     margin-left: auto;
     margin-right: auto;
     align-content: center;
-    width: 66%;
+    width: 100%;
   }
   
 .columnVaaka {
@@ -51,9 +76,7 @@
     opacity: 0.9;
 }
 .contactBlock {
-    position: absolute;
-    bottom: 380px;
-    right: 460px;
+    position: relative;
     background-color: white;
     opacity: 0.8;
     padding-bottom: 300px;
