--- a/styles.css
+++ b/styles.css
@@ -1,97 +1,74 @@
-@media only screen and (max-width: 1000px){
-  .nav-item {
-    display: none;
-  }
-}
-  .dropdown {
-    float: right;
-    overflow: hidden;
-  }
-  .dropdown .dropdown-button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    margin: 0;
-  }
-  .dropdown-content a {
-    display: none;
-    float: none;
-    color: black;
-    text-decoration: none;
-    text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-
 .row {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 3px;
-    flex-wrap: wrap;
-    text-align: center;
-    width: 100%;
-  } 
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 3px;
+  flex-wrap: wrap;
+  align-content: center;
+  width: 66%;
+} 
 .column {
-    flex: 16,66%;
-    padding-right: 3px;
-    padding-left: 3px;
-    padding-bottom: 3px;
-  }
+  flex: 16,66%;
+  padding-right: 3px;
+  padding-left: 3px;
+  padding-bottom: 3px;
+}
 .rowVaaka {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: auto;
-    margin-right: auto;
-    align-content: center;
-    width: 100%;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  align-content: center;
+  width: 66%;
+}
+
 .columnVaaka {
-    flex: 33,33%;
-    padding-left: 2px;
-    padding-right: 2px;
-    padding-bottom: 3px;
-  }
+  flex: 33,33%;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-bottom: 3px;
+}
 .photo_h2 {
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    margin-top: 30px;
-    text-align: center;
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  margin-top: 30px;
+  text-align: center;
 }
 .photo_p1 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    text-align: center;
-    margin-top: 20px;
-    width: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 20px;
+  width: auto;
 }
 .contactImage {
-    position: relative;
-    text-align: center;
-    padding-top: 20px;
-    z-index: 1;
-    opacity: 0.9;
+  position: relative;
+  text-align: center;
+  padding-top: 20px;
+  z-index: 1;
+  opacity: 0.9;
 }
 .contactBlock {
-    position: relative;
-    background-color: white;
-    opacity: 0.8;
-    padding-bottom: 300px;
-    padding-right: 400px;
-    text-align: center;
-    z-index: 2;
+  position: absolute;
+  bottom: 380px;
+  right: 460px;
+  background-color: white;
+  opacity: 0.8;
+  padding-bottom: 300px;
+  padding-right: 400px;
+  text-align: center;
+  z-index: 2;
 }
 .contactText {
-    color: black;
-    position: absolute;
-    top: 320px;
-    left: 1100px;
-    z-index: 3;
+  color: black;
+  position: absolute;
+  top: 320px;
+  left: 1100px;
+  z-index: 3;
 }
 .contactText h4 {
-    padding-bottom: 10px;
-    text-decoration: underline;
+  padding-bottom: 10px;
+  text-decoration: underline;
 }
