--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,8 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   margin-top: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
   text-align: center;
 }
 .photo_p1 {
@@ -45,34 +47,56 @@
   font-size: 15px;
   text-align: center;
   margin-top: 20px;
+  margin-left: 60px;
+  margin-right: 60px;
   width: auto;
 }
 .contactImage {
   position: relative;
+  height: 640px;
+  display: block;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 20px;
   z-index: 1;
   opacity: 0.9;
 }
 .contactBlock {
   position: absolute;
-  bottom: 380px;
-  right: 460px;
+  top: 59%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
-  opacity: 0.8;
-  padding-bottom: 300px;
-  padding-right: 400px;
   text-align: center;
   z-index: 2;
+  height: 645px;
+  width: 300px;
+  opacity: 0.9;
 }
 .contactText {
-  color: black;
+  text-align: center;
   position: absolute;
-  top: 320px;
-  left: 1100px;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 3;
 }
 .contactText h4 {
   padding-bottom: 10px;
   text-decoration: underline;
+}
+@media screen and (max-width: 550px) {
+  .contactImage {
+    height: 288px;
+  }
+  .contactBlock {
+    height: 288px;
+    width: 200px;
+    top: 35.5%;
+  }
+  .contactText {
+    font-size: 12px;
+    top: 35%;
+  }
 }
