--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+.home_h2 {
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  margin-top: 30px;
+  margin-left: 60px;
+  margin-right: 60px;
+  text-align: center;
+}
+.home_p1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 20px;
+  margin-left: 130px;
+  margin-right: 130px;
+  width: auto;
+}
 .row {
   margin-top: 20px;
   margin-bottom: 3px;
@@ -34,8 +52,8 @@
   font-size: 15px;
   text-align: center;
   margin-top: 20px;
-  margin-left: 60px;
-  margin-right: 60px;
+  margin-left: 130px;
+  margin-right: 130px;
   width: auto;
 }
 .contactImage {
@@ -77,6 +95,14 @@
   .rowVaaka {
     flex-direction: column;
     margin-left: 35px;
+  }
+  .photo_p1 {
+    margin-left: 35px;
+    margin-right: 35px;
+  }
+  .home_p1 {
+    margin-left: 35px;
+    margin-right: 35px;
   }
   .contactImage {
     height: 288px;
