--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@
 }
 .contactImage {
   position: relative;
-  height: 640px;
+  height: 620px;
   display: block;
   text-align: center;
   margin-left: auto;
@@ -119,4 +119,13 @@
   .navbar-toggler .navbar-toggler-icon {
     z-index: 4;
   }
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  text-align: center;
 }
