--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,45 @@
+
+.nav-link img {
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+}
+.navbar a:hover {
+  opacity: 0.6;
+}
+.main {
+  margin-top: 130px;
+}
+.fa {
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  left: 100px;
+  margin: -13px;
+  float: left;
+}
+.fa:hover {
+  opacity: 0.6;
+}
+.fa-facebook {
+  background: rgb(119, 119, 119);
+  color: white;
+}
+.fa-instagram {
+  background: rgb(119, 119, 119);
+  color: white;
+}
+.fa-twitter {
+  background: rgb(119, 119, 119);
+  color: white;
+}
 .home_h2 {
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
-  margin-top: 30px;
   margin-left: 60px;
   margin-right: 60px;
+  margin-top: -30px;
   text-align: center;
 }
 .home_p1 {
@@ -19,8 +54,11 @@
 .row {
   margin-top: 20px;
   margin-bottom: 3px;
+  left: 20px;
   display: flex;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 } 
 .column {
   width: 16,66%;
@@ -29,6 +67,7 @@
   padding-bottom: 3px;
 }
 .rowVaaka {
+  left: 15px;
   display: flex;
   justify-content: center;
 }
@@ -36,13 +75,13 @@
   width: 33,33%;
   padding-left: 3px;
   padding-right: 3px;
-  padding-bottom: 3px;
+  padding-bottom: 24px;
 }
 .photo_h2 {
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-left: 60px;
   margin-right: 60px;
   text-align: center;
@@ -58,7 +97,7 @@
 }
 .contactImage {
   position: relative;
-  height: 620px;
+  width: 98%;
   display: block;
   text-align: center;
   margin-left: auto;
@@ -67,38 +106,35 @@
   z-index: 1;
   opacity: 0.9;
 }
-.contactBlock {
-  position: absolute;
-  top: 59%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  text-align: center;
-  z-index: 2;
-  height: 645px;
-  width: 300px;
-  opacity: 0.9;
-}
-.contactText {
-  text-align: center;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 3;
-}
-.contactText h4 {
-  padding-bottom: 10px;
-  text-decoration: underline;
-}
 @media screen and (max-width: 500px) {
+  .main {
+    margin-top: -10px;
+  }
+  .row {
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-bottom: 5px;
+  }
+  .column {
+    margin-bottom: 3px;
+  }
   .rowVaaka {
     flex-direction: column;
-    margin-left: 35px;
+    margin-left: 3px;
+    margin-right: 3px;
+  }
+  .columnVaaka {
+    margin-top: -18px;
+  }
+  .horsepic {
+    margin-top: 15px;
   }
   .photo_p1 {
     margin-left: 35px;
     margin-right: 35px;
+  }
+  .home_h2 {
+    margin-top: 40px;
   }
   .home_p1 {
     margin-left: 35px;
@@ -107,25 +143,16 @@
   .contactImage {
     height: 288px;
   }
-  .contactBlock {
-    height: 288px;
-    width: 200px;
-    top: 35.5%;
-  }
-  .contactText {
-    font-size: 12px;
-    top: 35%;
-  }
-  .navbar-toggler .navbar-toggler-icon {
-    z-index: 4;
-  }
 }
 .footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  background-color: rgb(230, 230, 230);
+  color: rgb(141, 141, 141);
   text-align: center;
+  margin-top: 0px;
+  margin-bottom: -10px;
+  font-size: 12px;
 }
