--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-
+.main {
+  margin-top: -10px;
+}
 .nav-link img {
   border-radius: 50%;
   width: 35px;
@@ -6,9 +8,6 @@
 }
 .navbar a:hover {
   opacity: 0.6;
-}
-.main {
-  margin-top: 130px;
 }
 .fa {
   border-radius: 50%;
@@ -37,9 +36,9 @@
   font-style: italic;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
+  margin-top: 50px;
   margin-left: 60px;
   margin-right: 60px;
-  margin-top: -30px;
   text-align: center;
 }
 .home_p1 {
@@ -142,6 +141,11 @@
   }
   .contactImage {
     height: 288px;
+  }
+  .rounded-circle {
+    margin-left: -150px;
+    width: 65px;
+    height: 65px;
   }
 }
 .footer {
