--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,14 @@
   border-radius: 50%;
   width: 36px;
   height: 36px;
-  margin: -13px;
-  float: left;
+  margin: 10px;
+  text-align: center;
+}
+.fa::before {
+  width: 36px;
+  height: 36px;
+  margin: 3px;
+  text-align: center;
 }
 .fa:hover {
   opacity: 0.6;
@@ -176,6 +182,9 @@
     margin-left: -150px;
     width: 65px;
     height: 65px;
+  }
+  .navbar-toggler {
+    margin-left: 0px;
   }
 }
 .footer {
