--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,15 @@
 }
 .fa {
   border-radius: 50%;
-  width: 36px;
-  height: 36px;
-  margin: 10px;
+  width: 33px;
+  height: 33px;
+  margin: 4px;
+  line-height: 32px;
   text-align: center;
 }
 .fa::before {
-  width: 36px;
-  height: 36px;
-  margin: 3px;
+  width: 33px;
+  height: 33px;
   text-align: center;
 }
 .fa:hover {
@@ -99,18 +99,66 @@
   margin-right: 130px;
   width: auto;
 }
+.contact_icons{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 30px;
+}
 .bi-geo-alt {
+  width: 33,33%;
   color: white;
-  padding: 20px;
-  width: 200%;
+  padding-right: 130px;
+  padding-left: 130px;
+  padding-bottom: 3px;
 }
 .bi-telephone {
+  width: 33,33%;
   color: white;
-  padding: 20px;
+  padding-right: 130px;
+  padding-left: 130px;
+  padding-bottom: 3px;
 }
 .bi-envelope {
+  width: 33,33%;
   color: white;
-  padding: 20px;
+  padding-right: 130px;
+  padding-left: 130px;
+  padding-bottom: 3px;
+}
+.contact_texts {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contact_p1 {
+  width: 33,33%;
+  color: white;
+  padding-top: 30px;
+  padding-right: 70px;
+  padding-left: 70px;
+  padding-bottom: 3px;
+  text-align: center;
+}
+.contact_p2 {
+  width: 33,33%;
+  color: white;
+  padding-top: 30px;
+  padding-right: 70px;
+  padding-left: 70px;
+  padding-bottom: 3px;
+  text-align: center;
+}
+.contact_p3 {
+  width: 33,33%;
+  color: white;
+  padding-top: 30px;
+  padding-right: 70px;
+  padding-left: 70px;
+  padding-bottom: 3px;
+  text-align: center;
 }
 .contactBox {
   background-color: rgb(105,111,154);
@@ -126,24 +174,17 @@
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
-  margin-top: 80px;
+  margin-top: 30px;
   margin-left: 60px;
   margin-right: 60px;
-  color: white;
-}
-.contact_p1 {
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  margin-top: 20px;
-  margin-left: 130px;
-  margin-right: 130px;
-  width: auto;
   color: white;
 }
 @media screen and (max-width: 450px) {
   .main {
     margin-top: -10px;
+  }
+  .sm_icons {
+    text-align: center;
   }
   .row {
     margin-left: -5px;
