--- a/styles.css
+++ b/styles.css
@@ -179,12 +179,12 @@
   margin-right: 60px;
   color: white;
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
   .main {
     margin-top: -10px;
   }
   .sm_icons {
-    text-align: center;
+    justify-content: center;
   }
   .row {
     margin-left: -5px;
