--- a/styles.css
+++ b/styles.css
@@ -42,23 +42,22 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   margin-top: 50px;
-  margin-left: 60px;
-  margin-right: 60px;
+  padding-right: 30px;
+  padding-left: 30px;
   text-align: center;
 }
-.home_p1 {
+.home_p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   text-align: center;
   margin-top: 20px;
-  margin-left: 130px;
-  margin-right: 130px;
+  padding-right: 30px;
+  padding-left: 30px;
   width: auto;
 }
 .row {
   margin-top: 20px;
   margin-bottom: 3px;
-  left: 20px;
   display: flex;
   justify-content: center;
   margin-left: auto;
@@ -74,6 +73,8 @@
   left: 15px;
   display: flex;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .columnVaaka {
   width: 33,33%;
@@ -86,8 +87,8 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   margin-top: 50px;
-  margin-left: 60px;
-  margin-right: 60px;
+  padding-left: 30px;
+  padding-right: 30px;
   text-align: center;
 }
 .photo_p1 {
@@ -95,76 +96,36 @@
   font-size: 15px;
   text-align: center;
   margin-top: 20px;
-  margin-left: 130px;
-  margin-right: 130px;
-  width: auto;
-}
-.contact_icons{
-  display: flex;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 30px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 .bi-geo-alt {
   width: 33,33%;
   color: white;
-  padding-right: 130px;
-  padding-left: 130px;
-  padding-bottom: 3px;
 }
 .bi-telephone {
   width: 33,33%;
   color: white;
-  padding-right: 130px;
-  padding-left: 130px;
-  padding-bottom: 3px;
 }
 .bi-envelope {
   width: 33,33%;
   color: white;
-  padding-right: 130px;
-  padding-left: 130px;
-  padding-bottom: 3px;
 }
-.contact_texts {
-  display: flex;
-  justify-content: center;
+.contact_p {
+  font-size: 14px;
+  width: 33,33%;
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
-}
-.contact_p1 {
-  width: 33,33%;
-  color: white;
-  padding-top: 30px;
-  padding-right: 70px;
-  padding-left: 70px;
-  padding-bottom: 3px;
-  text-align: center;
-}
-.contact_p2 {
-  width: 33,33%;
-  color: white;
-  padding-top: 30px;
-  padding-right: 70px;
-  padding-left: 70px;
-  padding-bottom: 3px;
-  text-align: center;
-}
-.contact_p3 {
-  width: 33,33%;
-  color: white;
-  padding-top: 30px;
-  padding-right: 70px;
-  padding-left: 70px;
-  padding-bottom: 3px;
   text-align: center;
 }
 .contactBox {
   background-color: rgb(105,111,154);
   border: none;
   width: 100%;
-  height: 900px;
+  height: 850px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -175,16 +136,16 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   margin-top: 30px;
-  margin-left: 60px;
-  margin-right: 60px;
+  padding-bottom: 30px;
   color: white;
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .main {
     margin-top: -10px;
   }
   .sm_icons {
-    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
   }
   .row {
     margin-left: -5px;
@@ -205,14 +166,14 @@
   .horsepic {
     margin-top: 15px;
   }
-  .photo_p1 {
-    margin-left: 35px;
-    margin-right: 35px;
+  .photo_p {
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .home_h2 {
     margin-top: 40px;
   }
-  .home_p1 {
+  .home_p {
     margin-left: 35px;
     margin-right: 35px;
   }
