--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,12 @@
   padding-bottom: 30px;
   color: white;
 }
+.contactImage {
+  display: flex;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+}
 @media screen and (max-width: 500px) {
   .main {
     margin-top: -10px;
@@ -161,7 +167,7 @@
     margin-right: 3px;
   }
   .columnVaaka {
-    height: 100px;
+    width: auto;
     margin-top: -18px;
   }
   .horsepic {
@@ -182,12 +188,11 @@
     height: auto;
   }
   .rounded-circle {
-    margin-left: 0;
     width: 64px;
     height: 64px;
   }
-  .navbar-toggler {
-    margin-left: 0px;
+  .contactImage {
+    text-align: center;
   }
 }
 .footer {
