--- a/styles.css
+++ b/styles.css
@@ -140,10 +140,12 @@
   color: white;
 }
 .contactImage {
+  object-fit: contain;
   display: flex;
   justify-content: center;
   margin-right: auto;
   margin-left: auto;
+  max-width:100%;
 }
 @media screen and (max-width: 500px) {
   .main {
@@ -184,15 +186,9 @@
     margin-left: 35px;
     margin-right: 35px;
   }
-  .contactImage {
-    height: auto;
-  }
   .rounded-circle {
     width: 64px;
     height: 64px;
-  }
-  .contactImage {
-    text-align: center;
   }
 }
 .footer {
