--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 .main {
   margin-top: -10px;
 }
-.nav-link img {
-  border-radius: 50%;
-  width: 35px;
-  height: 35px;
+.navbar a {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .navbar a:hover {
   opacity: 0.6;
@@ -53,6 +52,31 @@
   margin-top: 20px;
   padding-right: 110px;
   padding-left: 110px;
+}
+.kuvaaja_h2 {
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  margin-top: 50px;
+  padding-right: 20px;
+  padding-left: 20px;
+  text-align: center;
+}
+.kuvaaja_p1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 20px;
+  padding-right: 110px;
+  padding-left: 110px;
+}
+.kuvaajaImage {
+  object-fit: contain;
+  display: flex;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  max-width:100%;
 }
 .row {
   margin-top: 20px;
@@ -183,9 +207,9 @@
     margin-left: -60px;
     margin-right: -60px;
   }
-  .rounded-circle {
-    width: 64px;
-    height: 64px;
+  .kuvaaja_p1 {
+    margin-left: -60px;
+    margin-right: -60px;
   }
 }
 .footer {
